--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<H1>Hi, I am Anish</H1>
-<h2>
-    It is my dad's birthday today
-</h2>
+<html>
+    <head>
+        <h1>
+            Welcome to Anishmukkara.me
+        </h1>
+    </head>
+</html>
