--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
     <head>
+        <div class="head">
         <h1>
             Welcome to Anishmukkara.me
         </h1>
+        </div>
+          <link rel="stylesheet" href="index.css">
     </head>
 </html>
