fixing bugs in head

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-        <div class="head">
-        <h1>
-            Welcome to Anishmukkara.me
-        </h1>
-        </div>
-          
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>anishmukkara.me</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="head">
+        <h1>Welcome to Anishmukkara.me</h1>
+    </div>
+</body>
 </html>
