--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>anishmukkara.me</title>
+    <title>Anishmukkara</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
