--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Anishmukkara</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS Link Test</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="head">
-        <h1>Welcome to Anishmukkara.me</h1>
-    </div>
+    <h1>Hello, CSS!</h1>
+    <p>If this text is green, CSS is working 🎉</p>
 </body>
 </html>
