updating css and html

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Link Test</title>
+    <title>Anishmukkara</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Hello, CSS!</h1>
-    <p>If this text is green, CSS is working 🎉</p>
+    <div class="head">
+        <h1>Welcome to Anishmukkara.me</h1>
+    </div>
 </body>
 </html>
