--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Anishmukkara</title>
-    <link rel="stylesheet" href="index.css">
+    <title>CSS Test</title>
+    <link rel="stylesheet" href="test.css">
 </head>
 <body>
-    <div class="head">
-        <h1>Welcome to Anishmukkara.me</h1>
-    </div>
+    <h1>🚀 CSS is working!</h1>
+    <p>If this page is purple with bouncy text, your CSS link is good.</p>
 </body>
 </html>
