--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS Test</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>🚀 CSS is working!</h1>
