--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CSS Test</title>
+    <title>anishmukkara.me</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>🚀 CSS is working!</h1>
-    <p>If this page is purple with bouncy text, your CSS link is good.</p>
+    <h1>Welcome to Anishmukkara.me 😎</h1>
+    <h2>Here you can explore my latest work and learn more about upcoming projects.</h2>
 </body>
 </html>
