--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Welcome to Anishmukkara.me 😎</h1>
+    <h1>Welcome to Anishmukkara.me ✨</h1>
     <h2>Here you can explore my latest work and learn more about upcoming projects.</h2>
     <h3>No projects Available yet</h3>
     <h3>No projects Available yet</h3>
@@ -29,7 +29,7 @@
     <h3>No projects Available yet</h3>
     <h3>No projects Available yet</h3>
     <h3>No projects Available yet</h3>
-    
+
     
 </body>
 </html>
