--- a/index.html
+++ b/index.html
@@ -1,35 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>anishmukkara.me</title>
-    <link rel="stylesheet" href="index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anish Mukkara</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Welcome to Anishmukkara.me ✨</h1>
-    <h2>Here you can explore my latest work and learn more about upcoming projects.</h2>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
-    <h3>No projects Available yet</h3>
+  <div class="container">
+    <h1>Welcome to Anish Mukkara’s Website</h1>
+    <h3>Made by Anish 😎</h3>
 
-    
+    <!-- Visit Counter -->
+    <p id="visit-count"></p>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
