--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anish Mukkara</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <h1>Welcome to Anish Mukkara’s Website</h1>
     <h3>Made by Anish 😎</h3>
-
-    <!-- Visit Counter -->
     <p id="visit-count"></p>
   </div>
 
