--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Anish Mukkara</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Anishmukkara.me</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Welcome to Anish Mukkara’s Website</h1>
-    <h3>Made by Anish 😎</h3>
-    <p id="visit-count"></p>
-  </div>
+  <h1>Welcome to anishmukkara.me ✨🌆🌃</h1>
+  <h2>Here you can explore my latest work and learn more about upcoming projects.</h2>
 
-  <script src="script.js"></script>
+  <!-- Visit Counter -->
+  <p id="visit-count">Loading total visits...</p>
+
+  <script src="index.js"></script>
 </body>
 </html>
