uodating html and css

--- a/index.html
+++ b/index.html
@@ -5,21 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anishmukkara.me</title>
   <link rel="stylesheet" href="index.css">
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Pixelify+Sans:wght@400..700&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
-  <h1>Welcome to anishmukkara.me ✨🌆🌃</h1>
+  <h1>Welcome to anishmukkara.me ✨</h1>
   <h2>Here you can explore my latest work and learn more about upcoming projects.</h2>
-
-  <p class="visit-counter">
-    Total visits: <span id="visits">Loading...</span>
-  </p>
-
-  <script>
-    fetch('https://api.countapi.xyz/hit/anishmukkara-me/visits')
-      .then(res => res.json())
-      .then(res => {
-        document.getElementById('visits').innerText = res.value;
-      });
-  </script>
+  <button style="font-size: 45px; background-color: lime;"> cool button</button>
 </body>
 </html>
