--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <h1>Welcome to anishmukkara.me ✨</h1>
   <h2>Here you can explore my latest work and learn more about upcoming projects.</h2>
-  <a href="file:///Users/anm21k/Documents/GitHub/anishmukkara.me/rickroll.html">
+  <a href="rickroll.html">
   <button style="font-size: 45px; background-color: lime; border-radius: 30px;"> cool button i made</button>
   </a>
 </body>
